Fix overflowing in horizontal direction for mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,15 +1,14 @@
-
 /* UNIVERSAL STYLE */
 
 html {
     font-size: 16px;
     font-family: "Roboto", sans-serif;
+    overflow-x: hidden;
 }
 
 body {
     margin: 0;
 }
-
 
 h4 {
     text-align: center;
@@ -42,7 +41,6 @@ img {
 }
 
 /* @media only screen and (max-width: 1024px) {
-
     html {
         font-size: 12px;
     }
@@ -50,7 +48,6 @@ img {
 } */
 
 /* @media only screen and (max-width: 768px) {
-
     html {
         font-size: 8px;
     }
@@ -64,7 +61,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1.5rem;
+    padding: 0 1.5rem 0 1.5rem;
     position: fixed;
     z-index: 5;
     background-color: white;
@@ -120,6 +117,7 @@ a.sign {
     .mobile {
         display: block; 
         padding: 0;
+        margin: 0;
         width: 100%;
     }  
 
